--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">ToDoList App</string>
+    <string name="priority_1">1 High </string>
+    <string name="priority_2">2 Medium </string>
+    <string name="priority_3">3 Low</string>
+    <string name="add_btn_text">ADD</string>
+    <string name="title_hint">Enter Task</string>
 </resources>
